@@ -1,5 +1,9 @@
+2006-07-11  Jeremy Cribb <jcribb@email.unc.edu>
+	- msd.m: suppressed warning for dividing by zero when requested window is too large.  Also removed NaN's that were reported when the window size was too large.
+
 2006-07-10  Kalpit Desai <kvdesai@email.unc.edu>
 	* msdbase.m: Fixed a typo and a bug in calculation of default Tau.
+
 2006-07-05  Kalpit Desai <kvdesai@email.unc.edu>
 	* msdbase.m: 
 	- Fixed nasty errors in the documentation and brought it up to date.
